# netrust

./: .gitignore  CODEBASE_REVIEW.md  Cargo.toml  GEMINI.md  README.md  TODO.md  frontend-plan.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/nauto_cli/: Cargo.toml
apps/nauto_cli/logs/: audit.devices.jsonl
apps/nauto_cli/src/: approvals.rs  audit.rs  bench.rs  compliance.rs  gitops.rs  integrations.rs  job_runner.rs  lib.rs  main.rs  marketplace.rs  notifications.rs  observability.rs  plugins.rs  scheduler.rs  telemetry.rs  transactions.rs  tui.rs  worker.rs
apps/nauto_cli/tests/: e2e.rs  failure_path.rs  run_command.rs  worker_queue.rs
apps/web-ui/: package-lock.json  package.json  tailwind.config.js
apps/web-ui/src/: App.tsx  index.css  main.tsx
apps/web-ui/src/hooks/: useData.ts
apps/web-ui/src/lib/: api.ts
crates/nauto_compliance/: Cargo.toml
crates/nauto_compliance/src/: lib.rs
crates/nauto_drivers/: Cargo.toml
crates/nauto_drivers/src/: config.rs  lib.rs  ssh.rs
crates/nauto_drivers/src/drivers/: arista_eos.rs  cisco_ios.rs  cisco_nxos_api.rs  generic_ssh.rs  juniper_junos.rs  meraki_cloud.rs  mock.rs  mod.rs
crates/nauto_engine/: Cargo.toml
crates/nauto_engine/src/: inventory.rs  lib.rs  queue.rs  store.rs
crates/nauto_model/: Cargo.toml
crates/nauto_model/src/: lib.rs
crates/nauto_model/tests/: serde.rs
crates/nauto_plugin_sdk/: Cargo.toml
crates/nauto_plugin_sdk/src/: lib.rs
crates/nauto_security/: Cargo.toml
crates/nauto_security/src/: lib.rs
crates/nauto_telemetry/: Cargo.toml  build.rs
crates/nauto_telemetry/proto/: gnmi.proto
crates/nauto_telemetry/src/: lib.rs
docs/: architecture.md  cli.md  compliance.md  distributed.md  drivers.md  gitops.md  integrations.md  job_engine.md  observability.md  performance.md  pilot_plan.md  plugins.md  production_readiness.md  quick_start.md  release_notes.md  repo_review.md  risk_register.md  roadmap.md  scheduling.md  scope.md  security.md  service_architecture.md  spikes_report.md  stakeholder_signoff.md  testing.md  transactions.md  ux.md  workflows.md
examples/: compliance_inputs.yaml  compliance_rules.yaml  inventory.yaml  netbox_devices.json  schedules.yaml  telemetry.yaml
examples/jobs/: show_version.yaml
scripts/: update_cacert.sh
spikes/: README.md
spikes/netconf_poc/: Cargo.toml
spikes/netconf_poc/src/: main.rs
spikes/ssh_poc/: Cargo.toml
spikes/ssh_poc/src/: main.rs
spikes/tauri_poc/public/: index.html
spikes/tauri_poc/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri_poc/src-tauri/src/: main.rs
spikes/wasm_host/: Cargo.toml
spikes/wasm_host/src/: main.rs
spikes/wasm_plugin/: Cargo.toml  README.md
spikes/wasm_plugin/src/: lib.rs
