[workspace]
members = [
    "spikes/ssh_poc",
    "spikes/netconf_poc",
    "spikes/tauri_poc/src-tauri",
    "spikes/wasm_host",
    "spikes/wasm_plugin",
    "crates/nauto_model",
    "crates/nauto_drivers",
    "crates/nauto_engine",
    "crates/nauto_security",
    "apps/nauto_cli",
    "crates/nauto_compliance",
    "crates/nauto_plugin_sdk",
    "crates/nauto_telemetry",
]
resolver = "2"
default-members = [
    "apps/nauto_cli",
    "crates/nauto_model",
    "crates/nauto_drivers",
    "crates/nauto_engine",
    "crates/nauto_security",
    "crates/nauto_compliance",
    "crates/nauto_plugin_sdk",
    "crates/nauto_telemetry"
]

