[package]
name = "nauto_drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-ssh2-tokio = "0.11"
nauto_model = { path = "../nauto_model" }
nauto_security = { path = "../nauto_security" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
similar = "2"
once_cell = "1"

