[package]
name = "nauto_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["clock"] }
nauto_drivers = { path = "../nauto_drivers" }
nauto_model = { path = "../nauto_model" }
nauto_compliance = { path = "../nauto_compliance" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
