[package]
name = "nauto_model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_yaml = "0.9"

