[package]
name = "nauto_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
snmp = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
