[package]
name = "tauri_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
nauto_cli = { path = "../../../apps/nauto_cli" }
serde_yaml = "0.9"
anyhow = "1"
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

